@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2000-2011 Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2011-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2011-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -40,16 +40,21 @@ import java.math.BigDecimal;
 import java.math.MathContext;
 import java.math.RoundingMode;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.ListIterator;
+import java.util.Map;
 import java.util.Optional;
 import java.util.TreeSet;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 import megamek.client.bot.BotLogger;
 import megamek.client.bot.princess.UnitBehavior.BehaviorType;
 import megamek.client.ui.Messages;
 import megamek.client.ui.SharedUtility;
+import megamek.common.MPCalculationSetting;
 import megamek.common.annotations.Nullable;
 import megamek.common.board.Board;
 import megamek.common.board.Coords;
@@ -69,6 +74,23 @@ import org.apache.logging.log4j.Level;
 public abstract class PathRanker implements IPathRanker {
     private final static MMLogger logger = MMLogger.create(PathRanker.class);
     private static final BotLogger botLogger = new BotLogger();
+
+    // Fraction of a failed water-entry piloting roll treated as an acceptable (non-damaging) outcome: falling
+    // when wading only drops the unit prone in the water (minor damage, stand next turn) rather than a real
+    // fall. The forgiveness is scaled by water depth - a fall in a shallow ford is nearly harmless, but is
+    // progressively worse in deeper water (where the separately-scored submerged-location breach hazard also
+    // applies). This keeps Princess willing to wade a shallow river to engage instead of pacing at the bank
+    // (issue #7627) without making her reckless in deep water.
+    private static final double WATER_FALL_FORGIVENESS_DEPTH_1 = 0.95;
+    private static final double WATER_FALL_FORGIVENESS_PER_DEPTH = 0.20;
+    private static final double WATER_FALL_FORGIVENESS_FLOOR = 0.30;
+    // Matches the "entering Depth N Water" piloting-roll description built in Entity.checkWaterMove.
+    private static final Pattern WATER_ENTRY_DEPTH_PATTERN = Pattern.compile("entering depth (\\d+)");
+    // Piloting-roll descriptions emitted for gravity overspeed (see Entity.checkMovedTooFast and
+    // SharedUtility.getPSRList). Matched lower-cased to add the self-inflicted leg damage into a path's
+    // expected damage taken. Kept as literals because the engine emits them as raw strings, not i18n keys.
+    private static final String PSR_DESC_GRAVITY_TOO_FAST = "used more mps than at 1g possible";
+    private static final String PSR_DESC_GRAVITY_HIGH_JUMP = "jumped in high gravity";
     // TODO: Introduce PathRankerCacheHelper class that contains "global" path
     // ranker state
     // TODO: Introduce FireControlCacheHelper class that contains "global" Fire
@@ -117,9 +139,9 @@ public abstract class PathRanker implements IPathRanker {
         // If the heat map of friendly activity has sufficient data, use the nearest hot
         // spot as
         // the anchor point
-        Coords allyCenter = owner.getFriendlyHotSpot(movePaths.get(0).getEntity().getPosition());
+        Coords allyCenter = owner.getFriendlyHotSpot(movePaths.getFirst().getEntity().getPosition());
         if (allyCenter == null) {
-            allyCenter = this.calculateAlliesCenter(movePaths.get(0).getEntity().getId(), friends, game);
+            allyCenter = this.calculateAlliesCenter(movePaths.getFirst().getEntity().getId(), friends, game);
         }
 
         TreeSet<RankedPath> returnPaths = new TreeSet<>(Collections.reverseOrder());
@@ -153,7 +175,7 @@ public abstract class PathRanker implements IPathRanker {
                     logger.error(e, "{} while processing {}", e.getMessage(), path);
                 }
             }
-            Entity mover = movePaths.get(0).getEntity();
+            Entity mover = movePaths.getFirst().getEntity();
             UnitBehavior behaviorTracker = getOwner().getUnitBehaviorTracker();
             boolean noDamageButCanDoDamage = !pathsHaveExpectedDamage
                   && (FireControl.getMaxDamageAtRange(mover, 1, false, false) > 0);
@@ -183,7 +205,62 @@ public abstract class PathRanker implements IPathRanker {
             i++;
         }
 
+        logSprintDecisionSummary(returnPaths);
+
         return returnPaths;
+    }
+
+    /**
+     * Logs a one-line, debug-level summary of the sprint decision for a unit's move: whether the best-ranked path
+     * sprints, how many candidate paths end in a sprint, how many of those were penalized for ending inside enemy
+     * weapon range, and the best sprint vs. non-sprint ranks. This makes the bot's sprint reasoning visible without
+     * wading through per-path trace output; the full per-path detail is in the BotLogger TSV columns
+     * ({@code isSprinting}, {@code sprintExposurePenalty}, {@code sprintThreatEnemyId}, {@code sprintThreatDistance},
+     * {@code sprintThreatRange}) and each ranked path's reason string.
+     *
+     * @param rankedPaths the ranked paths for this unit's move, best first
+     */
+    private void logSprintDecisionSummary(TreeSet<RankedPath> rankedPaths) {
+        if (rankedPaths.isEmpty() || !logger.isLevelLessSpecificThan(Level.INFO)) {
+            return;
+        }
+
+        int sprintPathCount = 0;
+        int penalizedPathCount = 0;
+        RankedPath bestSprintPath = null;
+        RankedPath bestNonSprintPath = null;
+
+        for (RankedPath rankedPath : rankedPaths) {
+            if (BasicPathRanker.isSprintingPath(rankedPath.getPath())) {
+                sprintPathCount++;
+                Double sprintExposurePenalty = rankedPath.getScores().get("sprintExposurePenalty");
+                if ((sprintExposurePenalty != null) && (sprintExposurePenalty > 0)) {
+                    penalizedPathCount++;
+                }
+                if (bestSprintPath == null) {
+                    bestSprintPath = rankedPath;
+                }
+            } else if (bestNonSprintPath == null) {
+                bestNonSprintPath = rankedPath;
+            }
+        }
+
+        RankedPath bestPath = rankedPaths.first();
+        // The score breakdown (getReason) answers "why did this unit move here?" - include it at debug so a playtest
+        // can see the winning path's factors without enabling the per-path trace flood.
+        logger.debug("[Move] {}: best path ends {} ({}, rank {}); {} of {} candidate paths sprint, "
+                    + "{} sprint paths penalized for ending in enemy weapon range; "
+                    + "best sprint rank {}, best non-sprint rank {}. Breakdown: {}",
+              bestPath.getPath().getEntity().getDisplayName(),
+              bestPath.getPath().getFinalCoords(),
+              BasicPathRanker.isSprintingPath(bestPath.getPath()) ? "SPRINTS" : "does not sprint",
+              bestPath.getRank(),
+              sprintPathCount,
+              rankedPaths.size(),
+              penalizedPathCount,
+              (bestSprintPath == null) ? "n/a" : bestSprintPath.getRank(),
+              (bestNonSprintPath == null) ? "n/a" : bestNonSprintPath.getRank(),
+              bestPath.getReason());
     }
 
     private List<MovePath> validatePaths(List<MovePath> startingPathList, Game game, int maxRange,
@@ -194,7 +271,7 @@ public abstract class PathRanker implements IPathRanker {
             return startingPathList;
         }
 
-        Entity mover = startingPathList.get(0).getEntity();
+        Entity mover = startingPathList.getFirst().getEntity();
 
         Targetable closestTarget = findClosestEnemy(mover, mover.getPosition(), game);
         int startingTargetDistance = (closestTarget == null) ? Integer.MAX_VALUE
@@ -334,10 +411,15 @@ public abstract class PathRanker implements IPathRanker {
                 unmovedDistanceModifier = enemy.getWalkMP();
             }
 
+            // "Closest" is measured by the adjusted distance (an unmoved enemy is treated as farther, since it can
+            // still move away), so store the same adjusted value we compare against - not the raw distance. The
+            // minDistance filter is a "not within N raw hexes" gate (e.g. the not-zero-distance facing target), so
+            // it is tested against the raw hex distance, otherwise a same-hex enemy could pass it via its movement
+            // allowance.
             int distance = position.distance(enemy.getPosition());
-            if (((distance + unmovedDistanceModifier) < range) && ((distance + unmovedDistanceModifier)
-                  >= minDistance)) {
-                range = distance;
+            int adjustedDistance = distance + unmovedDistanceModifier;
+            if ((adjustedDistance < range) && (distance >= minDistance)) {
+                range = adjustedDistance;
                 closest = enemy;
             }
         }
@@ -391,10 +473,11 @@ public abstract class PathRanker implements IPathRanker {
         logger.trace("Calculating Move Path Success for {}", pathCopy);
 
         for (TargetRoll roll : pilotingRolls) {
+            String rollDescription = roll.getDesc().toLowerCase();
             // Skip the getting up check. That's handled when checking for being immobile.
-            if (roll.getDesc().toLowerCase().contains("getting up")) {
+            if (rollDescription.contains("getting up")) {
                 continue;
-            } else if (roll.getDesc().toLowerCase().contains("careful stand")) {
+            } else if (rollDescription.contains("careful stand")) {
                 continue;
             }
             boolean naturalAptPilot = movePath.getEntity().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING);
@@ -403,6 +486,14 @@ public abstract class PathRanker implements IPathRanker {
             }
 
             double odds = Compute.oddsAbove(roll.getValue(), naturalAptPilot) / 100d;
+            // A failed water-entry roll only drops the unit prone in the water rather than causing a damaging
+            // fall, so treat most of that chance as an acceptable outcome - more so the shallower the water.
+            // Otherwise an 8% wet-fall reads as a catastrophe (fall chance x fallShame) and Princess refuses to
+            // wade even a shallow river (issue #7627).
+            if (rollDescription.contains("entering depth")) {
+                double forgiveness = waterFallForgiveness(waterEntryDepth(rollDescription));
+                odds += (1.0 - odds) * forgiveness;
+            }
             logger.trace("Odds above {} = {}", roll.getValue(), odds);
             successProbability *= odds;
         }
@@ -430,10 +521,50 @@ public abstract class PathRanker implements IPathRanker {
     }
 
     /**
+     * The fraction of a failed water-entry piloting roll treated as an acceptable (non-damaging) outcome,
+     * scaled by water depth. A fall while wading only drops the unit prone in the water, which is nearly
+     * harmless in a shallow ford but progressively worse in deeper water; the forgiveness therefore shrinks
+     * as depth grows and never drops below {@link #WATER_FALL_FORGIVENESS_FLOOR}.
+     *
+     * @param waterDepth the depth (in levels) of the water being entered
+     *
+     * @return the forgiveness fraction, between {@link #WATER_FALL_FORGIVENESS_FLOOR} and
+     *       {@link #WATER_FALL_FORGIVENESS_DEPTH_1}
+     */
+    private static double waterFallForgiveness(int waterDepth) {
+        int depthBeyondFirst = Math.max(0, waterDepth - 1);
+        double forgiveness = WATER_FALL_FORGIVENESS_DEPTH_1 - (depthBeyondFirst * WATER_FALL_FORGIVENESS_PER_DEPTH);
+        return Math.max(WATER_FALL_FORGIVENESS_FLOOR, forgiveness);
+    }
+
+    /**
+     * Extracts the water depth from a water-entry piloting-roll description of the form
+     * {@code "entering Depth N Water"} (see {@code Entity.checkWaterMove}).
+     *
+     * @param rollDescription the lower-cased roll description
+     *
+     * @return the parsed depth, or {@code 1} (shallowest) if the description cannot be parsed
+     */
+    private static int waterEntryDepth(String rollDescription) {
+        Matcher matcher = WATER_ENTRY_DEPTH_PATTERN.matcher(rollDescription);
+        if (matcher.find()) {
+            try {
+                return Integer.parseInt(matcher.group(1));
+            } catch (NumberFormatException numberFormatException) {
+                // The capture is all digits, so this only happens on an implausibly large value that overflows
+                // an int; treat it as the shallowest depth rather than failing.
+                return 1;
+            }
+        }
+        return 1;
+    }
+
+    /**
      * Estimates the most expected damage that a path could cause, given the pilot skill of the path ranker and various
      * conditions.
      * <p>
-     * XXX Sleet01: add fall pilot damage, skid damage, and low-gravity overspeed damage calcs
+     * XXX Sleet01: add fall pilot damage and skid damage calcs (low-/high-gravity overspeed leg damage is
+     * handled below via {@link #predictGravityOverspeedDamage}).
      */
     protected double calculateMovePathPSRDamage(Entity movingEntity, MovePath path) {
         double damage = 0.0;
@@ -450,10 +581,65 @@ public abstract class PathRanker implements IPathRanker {
                   description.contains(Messages.getString("TacOps.leaping.fall_damage"))
             ) {
                 damage += predictLeapFallDamage(movingEntity, roll);
+            } else if (
+                  description.contains(PSR_DESC_GRAVITY_TOO_FAST)
+                        || description.contains(PSR_DESC_GRAVITY_HIGH_JUMP)
+            ) {
+                damage += predictGravityOverspeedDamage(movingEntity, path, roll);
             }
         }
 
         return damage;
+    }
+
+    /**
+     * Predicts the self-inflicted leg internal-structure damage Princess would take if she failed the gravity
+     * "overspeed" piloting roll on this path. On low-gravity worlds a unit can run or jump farther than its 1G
+     * rating allows, and on high-gravity worlds a jump that costs it walk MP triggers a roll; failing either
+     * deals extreme-gravity damage to the legs (1 point per MP over the 1G limit for ground or low-gravity
+     * jumps, or {@code (1G walk MP - gravity walk MP) / 2} for a high-gravity jump).
+     *
+     * <p>Unlike the leaping rolls, the gravity roll does not encode the damage magnitude in its value (see
+     * {@link Entity#checkMovedTooFast}), so it is recomputed from the path's final step. The result is
+     * weighted by the chance of failing the roll, matching {@code predictLeapDamage}.</p>
+     *
+     * @param movingEntity the unit whose path is being ranked
+     * @param path         the candidate path
+     * @param roll         the gravity overspeed piloting roll from {@link #getPSRList(MovePath)}
+     *
+     * @return the odds-weighted expected leg damage, or {@code 0} if the path does not actually overspeed
+     */
+    private double predictGravityOverspeedDamage(Entity movingEntity, MovePath path, TargetRoll roll) {
+        MoveStep lastStep = path.getLastStep();
+        if (lastStep == null) {
+            return 0.0;
+        }
+
+        String description = roll.getLastPlainDesc().toLowerCase();
+        int overspeedMP;
+        if (description.contains(PSR_DESC_GRAVITY_HIGH_JUMP)) {
+            // High-gravity jump: half the walk MP lost to gravity (TO:AR gravity rules).
+            overspeedMP = (movingEntity.getWalkMP(MPCalculationSetting.NO_GRAVITY) - movingEntity.getWalkMP()) / 2;
+        } else if (path.isJumping()) {
+            // Low-gravity jump overspeed: MP used beyond the 1G jump rating. A mechanical jump booster uses
+            // its own no-gravity rating, matching the server extreme-gravity damage calculation.
+            int noGravityJumpMP = lastStep.isUsingMekJumpBooster()
+                  ? movingEntity.getMechanicalJumpBoosterMP(MPCalculationSetting.NO_GRAVITY)
+                  : movingEntity.getJumpMP(MPCalculationSetting.NO_GRAVITY);
+            overspeedMP = lastStep.getMpUsed() - noGravityJumpMP;
+        } else {
+            // Low-gravity ground overspeed: MP used beyond the 1G running limit. The server's extreme-gravity
+            // damage uses getRunningGravityLimit() directly (no pavement/road adjustment), so mirror it.
+            overspeedMP = lastStep.getMpUsed() - movingEntity.getRunningGravityLimit();
+        }
+
+        if (overspeedMP <= 0) {
+            return 0.0;
+        }
+
+        // Each excess MP costs 1 point of leg internal structure on a failed roll; weight by failure chance.
+        double failureProbability = 1.0 - (Compute.oddsAbove(roll.getValue(), false) / 100.0);
+        return overspeedMP * failureProbability;
     }
 
     protected List<TargetRoll> getPSRList(MovePath path) {
@@ -530,8 +716,8 @@ public abstract class PathRanker implements IPathRanker {
      * @return True if there is a building in our path that might collapse.
      */
     private boolean willBuildingCollapse(MovePath path, Game game) {
-        // airborne aircraft cannot collapse buildings
-        if (path.getEntity().isAero() || path.getEntity().hasETypeFlag(Entity.ETYPE_VTOL)) {
+        // airborne aircraft cannot collapse buildings; landed dropships can, so check isAirborne() not isAero()
+        if (path.getEntity().isAirborne() || path.getEntity().hasETypeFlag(Entity.ETYPE_VTOL)) {
             return false;
         }
 
@@ -555,20 +741,41 @@ public abstract class PathRanker implements IPathRanker {
 
         // If we're not jumping, check each building to see if it will collapse if it
         // has a basement.
-        final double mass = path.getEntity().getWeight() + 10;
+        final Entity entity = path.getEntity();
+        final double mass = entity.getWeight() + 10;
+        // Secondary positions are absolute coords based on the entity's current position.
+        // For multi-hex units (e.g. Dropships), key 0 is the center and keys 1-N are the
+        // surrounding hexes. For single-hex units, this map is empty.
+        final Map<Integer, Coords> secondaryPositions = entity.getSecondaryPositions();
+        final Coords entityCenter = entity.getPosition();
         final ListIterator<MoveStep> steps = path.getSteps();
         while (steps.hasNext()) {
             final MoveStep step = steps.next();
-            final IBuilding building = game.getBoard(step.getBoardId()).getBuildingAt(step.getPosition());
-            if (building == null) {
-                continue;
+
+            // Determine which hexes this entity occupies at this step position.
+            // For multi-hex units, translate each secondary position by the step delta.
+            Collection<Coords> occupiedHexes;
+            if (secondaryPositions.isEmpty()) {
+                occupiedHexes = List.of(step.getPosition());
+            } else {
+                final Coords stepCenter = step.getPosition();
+                occupiedHexes = secondaryPositions.values().stream()
+                      .map(sec -> stepCenter.add(sec.subtract(entityCenter)))
+                      .toList();
             }
 
-            // Add the mass of anyone else standing in/on this building.
-            double fullMass = mass + owner.getMassOfAllInBuilding(game, step.getPosition(), step.getBoardId());
+            for (Coords pos : occupiedHexes) {
+                final IBuilding building = game.getBoard(step.getBoardId()).getBuildingAt(pos);
+                if (building == null) {
+                    continue;
+                }
 
-            if (fullMass > building.getCurrentCF(step.getPosition())) {
-                return true;
+                // Add the mass of anyone else standing in/on this building.
+                double fullMass = mass + owner.getMassOfAllInBuilding(game, pos, step.getBoardId());
+
+                if (fullMass > building.getCurrentCF(pos)) {
+                    return true;
+                }
             }
         }
         return false;
