@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2003-2005 - Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2003-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2003-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -72,6 +72,7 @@ import megamek.client.ui.buttons.MMToggleButton;
 import megamek.client.ui.clientGUI.ButtonOrderPreferences;
 import megamek.client.ui.clientGUI.ClientGUI;
 import megamek.client.ui.clientGUI.GUIPreferences;
+import megamek.client.ui.clientGUI.GifRecordingMode;
 import megamek.client.ui.clientGUI.UITheme;
 import megamek.client.ui.clientGUI.UnitDisplayOrderPreferences;
 import megamek.client.ui.comboBoxes.MMComboBox;
@@ -89,6 +90,7 @@ import megamek.client.ui.panels.phaseDisplay.commands.MoveCommand;
 import megamek.client.ui.util.FontHandler;
 import megamek.client.ui.util.KeyCommandBind;
 import megamek.client.ui.util.PlayerColour;
+import megamek.client.ui.util.UIUtil;
 import megamek.client.ui.widget.SkinXMLHandler;
 import megamek.codeUtilities.MathUtility;
 import megamek.common.Configuration;
@@ -104,6 +106,15 @@ import megamek.logging.MMLogger;
 
 /**
  * The Client Settings Dialog offering GUI options concerning tooltips, map display, keybinds etc.
+ *
+ * <p>Hidden testing/debug preferences are intentionally NOT shown in the Advanced list (they are filtered out via
+ * {@link #HIDDEN_ADVANCED_OPTIONS}) and can only be enabled by manually adding them to {@code clientsettings.xml}:
+ * <pre>{@code
+ * <preference name="RevealAllArtilleryRounds" value="true"/>          reveal BOTH teams' in-flight artillery target hexes
+ * <preference name="AdvancedShowBotArtilleryHeatMap" value="true"/>   draw Princess's predicted/firing artillery heat map
+ * <preference name="AdvancedRevealObscuredArtillery" value="true"/>   reveal otherwise-obscured artillery hex markers
+ * }</pre>
+ * Each defaults to {@code false}; remove the line (or set {@code false}) to disable.
  */
 public class CommonSettingsDialog extends AbstractButtonDialog
       implements ItemListener, FocusListener, ListSelectionListener, ChangeListener {
@@ -260,8 +271,6 @@ public class CommonSettingsDialog extends AbstractButtonDialog
           "CommonSettingsDialog.defaultAutoejectDisabled"));
     private final JCheckBox useAverageSkills =
           new JCheckBox(Messages.getString("CommonSettingsDialog.useAverageSkills"));
-    private final JCheckBox useGPinUnitSelection = new JCheckBox(Messages.getString(
-          "CommonSettingsDialog.useGPinUnitSelection"));
     private final JCheckBox generateNames = new JCheckBox(Messages.getString("CommonSettingsDialog.generateNames"));
     private final JCheckBox showUnitId = new JCheckBox(Messages.getString("CommonSettingsDialog.showUnitId"));
     private final JCheckBox showAutoResolvePanel = new JCheckBox(Messages.getString(
@@ -270,8 +279,6 @@ public class CommonSettingsDialog extends AbstractButtonDialog
     private JComboBox<String> displayLocale;
     private final JCheckBox showIPAddressesInChat = new JCheckBox(Messages.getString(
           "CommonSettingsDialog.showIPAddressesInChat"));
-    private final JCheckBox startSearchlightsOn = new JCheckBox(Messages.getString(
-          "CommonSettingsDialog.startSearchlightsOn"));
     private final JCheckBox spritesOnly = new JCheckBox(Messages.getString(
           "CommonSettingsDialog.spritesOnly"));
     private final JCheckBox showDamageLevel = new JCheckBox(Messages.getString("CommonSettingsDialog.showDamageLevel"));
@@ -309,6 +316,8 @@ public class CommonSettingsDialog extends AbstractButtonDialog
           "CommonSettingsDialog.hexes.ShowArtilleryMisses"));
     private final JCheckBox artilleryDisplayDriftedHits = new JCheckBox(Messages.getString(
           "CommonSettingsDialog.hexes.ShowArtilleryDriftedHits"));
+    private final JCheckBox artilleryDisplayDriftArrows = new JCheckBox(Messages.getString(
+          "CommonSettingsDialog.hexes.ShowArtilleryDriftArrows"));
     private final JCheckBox bombsDisplayMisses = new JCheckBox(Messages.getString(
           "CommonSettingsDialog.hexes.ShowBombMisses"));
     private final JCheckBox bombsDisplayDrifts = new JCheckBox(Messages.getString(
@@ -342,6 +351,9 @@ public class CommonSettingsDialog extends AbstractButtonDialog
     private ColourSelectorButton csbUnitTextColor;
     private ColourSelectorButton csbBuildingTextColor;
     private ColourSelectorButton csbLowFoliageColor;
+    private ColourSelectorButton csbDemolitionChargeColor;
+    private final JCheckBox demolitionChargeHazardOutline = new JCheckBox(
+          Messages.getString("CommonSettingsDialog.demolitionChargeHazardOutline"));
     private ColourSelectorButton csbBoardTextColor;
     private ColourSelectorButton csbBoardSpaceTextColor;
     private ColourSelectorButton csbMapSheetColor;
@@ -383,8 +395,10 @@ public class CommonSettingsDialog extends AbstractButtonDialog
           new JCheckBox(Messages.getString("CommonSettingsDialog.gameSummaryBV.name"));
     private final JCheckBox gameSummaryMM =
           new JCheckBox(Messages.getString("CommonSettingsDialog.gameSummaryMM.name"));
-    private final JCheckBox gifGameSummaryMM = new JCheckBox(Messages.getString(
-          "CommonSettingsDialog.gifGameSummaryMM.name"));
+    private final JComboBox<String> gifGameSummaryRecording = new JComboBox<>(new String[] {
+          Messages.getString("CommonSettingsDialog.gifGameSummaryRecording.always"),
+          Messages.getString("CommonSettingsDialog.gifGameSummaryRecording.ask"),
+          Messages.getString("CommonSettingsDialog.gifGameSummaryRecording.never") });
     private final JCheckBox showUnitDisplayNamesOnMinimap = new JCheckBox(Messages.getString(
           "CommonSettingsDialog.showUnitDisplayNamesOnMinimap.name"));
     private JComboBox<String> skinFiles;
@@ -518,6 +532,15 @@ public class CommonSettingsDialog extends AbstractButtonDialog
     private final JCheckBox planetaryConditionsShowIndicators = new JCheckBox(Messages.getString(
           "CommonSettingsDialog.planetaryConditionsShowIndicators"));
     private JSpinner planetaryConditionsBackgroundTransparency;
+
+    private final JCheckBox toastEnabled = new JCheckBox(Messages.getString("CommonSettingsDialog.toastEnabled"));
+    private final JCheckBox toastReportEvents = new JCheckBox(Messages.getString(
+          "CommonSettingsDialog.toastReportEvents"));
+    private JSpinner toastDurationSpinner;
+    private JLabel toastDurationLabel;
+    private JSpinner toastDripSpinner;
+    private JLabel toastDripLabel;
+
     private JSlider traceOverlayTransparencySlider;
     private JSlider traceOverlayScaleSlider;
     private JSlider traceOverlayOriginXSlider;
@@ -548,6 +571,26 @@ public class CommonSettingsDialog extends AbstractButtonDialog
 
     private static final Dimension LABEL_SPACER = new Dimension(5, 0);
     private static final Dimension DEPENDENT_INSET = new Dimension(25, 0);
+
+    /** Shortest and longest display/spacing time the toast spinners allow, in seconds. */
+    private static final int MIN_TOAST_SECONDS = 1;
+    private static final int MAX_TOAST_SECONDS = 10;
+    /** Wrap width for the multi-line warning under the toast on/off checkbox, before GUI scaling. */
+    private static final int TOAST_WARNING_WIDTH_PX = 480;
+
+    /**
+     * Clamps a persisted toast-timing value into the range the toast spinners allow. Guards against a
+     * hand-edited or corrupted preferences file: {@link SpinnerNumberModel}'s constructor throws an
+     * {@link IllegalArgumentException} when its initial value falls outside {@code [minimum, maximum]},
+     * which would crash the Overlays tab as it is built.
+     *
+     * @param seconds the stored timing value in seconds, possibly out of range
+     *
+     * @return the value clamped to {@code [MIN_TOAST_SECONDS, MAX_TOAST_SECONDS]}
+     */
+    private static int clampToastSeconds(int seconds) {
+        return Math.min(MAX_TOAST_SECONDS, Math.max(MIN_TOAST_SECONDS, seconds));
+    }
 
     // Save some values to restore them when the dialog is canceled
     private boolean savedFovHighlight;
@@ -837,6 +880,9 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         comps.add(checkboxEntry(artilleryDisplayDriftedHits,
               Messages.getString("CommonSettingsDialog.hexes.ShowArtilleryDriftedHits.tooltip")));
         artilleryDisplayDriftedHits.setSelected(GUIP.getShowArtilleryDrifts());
+        comps.add(checkboxEntry(artilleryDisplayDriftArrows,
+              Messages.getString("CommonSettingsDialog.hexes.ShowArtilleryDriftArrows.tooltip")));
+        artilleryDisplayDriftArrows.setSelected(GUIP.getShowArtilleryDriftArrows());
         comps.add(checkboxEntry(bombsDisplayMisses,
               Messages.getString("CommonSettingsDialog.hexes.ShowBombMisses.tooltip")));
         bombsDisplayMisses.setSelected(GUIP.getShowBombMisses());
@@ -864,7 +910,14 @@ public class CommonSettingsDialog extends AbstractButtonDialog
               new ColourSelectorButton(Messages.getString("CommonSettingsDialog.colors.LowFoliageColor"));
         csbLowFoliageColor.setColour(GUIP.getLowFoliageColor());
         row.add(csbLowFoliageColor);
+
+        csbDemolitionChargeColor = new ColourSelectorButton(Messages.getString(
+              "CommonSettingsDialog.colors.DemolitionChargeColor"));
+        csbDemolitionChargeColor.setColour(GUIP.getDemolitionChargeColor());
+        row.add(csbDemolitionChargeColor);
         comps.add(row);
+
+        comps.add(checkboxEntry(demolitionChargeHazardOutline, null));
 
         addLineSpacer(comps);
 
@@ -1723,6 +1776,67 @@ public class CommonSettingsDialog extends AbstractButtonDialog
 
         addLineSpacer(comps);
 
+        // Set the state before checkboxEntry() attaches the item listener: the listener drives the dependent
+        // controls, which are not built until further down this method.
+        toastEnabled.setSelected(GUIP.getToastEnabled());
+        comps.add(checkboxEntry(toastEnabled, Messages.getString("CommonSettingsDialog.toastEnabled.tooltip")));
+
+        // The warning stays visible whether or not toasts are on: a player deciding whether to switch them off needs
+        // to read it before clicking, not after.
+        JLabel toastDisabledWarning = new JLabel("<html><body style='width: "
+              + UIUtil.scaleForGUI(TOAST_WARNING_WIDTH_PX) + "px'>"
+              + Messages.getString("CommonSettingsDialog.toastEnabled.warning") + "</body></html>");
+        toastDisabledWarning.setToolTipText(Messages.getString("CommonSettingsDialog.toastEnabled.tooltip"));
+        row = new ArrayList<>();
+        row.add(Box.createRigidArea(DEPENDENT_INSET));
+        row.add(toastDisabledWarning);
+        comps.add(row);
+
+        addSpacer(comps, 3);
+
+        SpinnerNumberModel toastDurationModel = new SpinnerNumberModel(
+              clampToastSeconds(GUIP.getToastDurationSeconds()),
+              MIN_TOAST_SECONDS,
+              MAX_TOAST_SECONDS,
+              1);
+        toastDurationSpinner = new JSpinner(toastDurationModel);
+        toastDurationSpinner.setMaximumSize(new Dimension(150, 40));
+        toastDurationSpinner.setToolTipText(Messages.getString("CommonSettingsDialog.toastDurationSeconds.tooltip"));
+        toastDurationLabel = new JLabel(Messages.getString("CommonSettingsDialog.toastDurationSeconds"));
+        toastDurationLabel.setToolTipText(Messages.getString("CommonSettingsDialog.toastDurationSeconds.tooltip"));
+        row = new ArrayList<>();
+        row.add(Box.createRigidArea(DEPENDENT_INSET));
+        row.add(toastDurationSpinner);
+        row.add(toastDurationLabel);
+        comps.add(row);
+
+        SpinnerNumberModel toastDripModel = new SpinnerNumberModel(
+              clampToastSeconds(GUIP.getToastDripSeconds()),
+              MIN_TOAST_SECONDS,
+              MAX_TOAST_SECONDS,
+              1);
+        toastDripSpinner = new JSpinner(toastDripModel);
+        toastDripSpinner.setMaximumSize(new Dimension(150, 40));
+        toastDripSpinner.setToolTipText(Messages.getString("CommonSettingsDialog.toastDripSeconds.tooltip"));
+        toastDripLabel = new JLabel(Messages.getString("CommonSettingsDialog.toastDripSeconds"));
+        toastDripLabel.setToolTipText(Messages.getString("CommonSettingsDialog.toastDripSeconds.tooltip"));
+        row = new ArrayList<>();
+        row.add(Box.createRigidArea(DEPENDENT_INSET));
+        row.add(toastDripSpinner);
+        row.add(toastDripLabel);
+        comps.add(row);
+
+        toastReportEvents.setSelected(GUIP.getToastReportEvents());
+        row = new ArrayList<>();
+        row.add(Box.createRigidArea(DEPENDENT_INSET));
+        row.addAll(checkboxEntry(toastReportEvents,
+              Messages.getString("CommonSettingsDialog.toastReportEvents.tooltip")));
+        comps.add(row);
+
+        setToastControlsEnabled(toastEnabled.isSelected());
+
+        addLineSpacer(comps);
+
         addSpacer(comps, 1);
 
         JLabel traceOverlayTransparencyLabel = new JLabel(Messages.getString(
@@ -1893,9 +2007,18 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         comps.add(checkboxEntry(gameSummaryMM,
               Messages.getString("CommonSettingsDialog.gameSummaryMM.tooltip",
                     Configuration.gameSummaryImagesMMDir())));
-        comps.add(checkboxEntry(gifGameSummaryMM,
-              Messages.getString("CommonSettingsDialog.gifGameSummaryMM.tooltip",
-                    Configuration.gameSummaryImagesMMDir())));
+        JLabel gifGameSummaryRecordingLabel =
+              new JLabel(Messages.getString("CommonSettingsDialog.gifGameSummaryRecording.name"));
+        String gifRecordingTooltip = Messages.getString("CommonSettingsDialog.gifGameSummaryRecording.tooltip",
+              Configuration.gameSummaryImagesMMDir());
+        gifGameSummaryRecordingLabel.setToolTipText(gifRecordingTooltip);
+        gifGameSummaryRecording.setToolTipText(gifRecordingTooltip);
+        gifGameSummaryRecording.setMaximumSize(UIUtil.scaleForGUI(250, 25));
+        List<Component> gifGameSummaryRow = new ArrayList<>();
+        gifGameSummaryRow.add(gifGameSummaryRecordingLabel);
+        gifGameSummaryRow.add(Box.createHorizontalStrut(15));
+        gifGameSummaryRow.add(gifGameSummaryRecording);
+        comps.add(gifGameSummaryRow);
         comps.add(checkboxEntry(drawFacingArrowsOnMiniMap, null));
         comps.add(checkboxEntry(drawSensorRangeOnMiniMap, null));
         comps.add(checkboxEntry(paintBordersOnMiniMap, null));
@@ -1907,7 +2030,7 @@ public class CommonSettingsDialog extends AbstractButtonDialog
               100,
               1);
         movePathPersistenceOnMiniMap = new JSpinner(movePathPersistenceModel);
-        movePathPersistenceOnMiniMap.setMaximumSize(new Dimension(150, 40));
+        movePathPersistenceOnMiniMap.setMaximumSize(UIUtil.scaleForGUI(150, 40));
         movePathPersistenceOnMiniMap.setToolTipText(Messages.getString(
               "CommonSettingsDialog.movePathPersistence.tooltip"));
         JLabel movePathPersistenceOnMiniMapLabel = new JLabel(Messages.getString(
@@ -2146,8 +2269,6 @@ public class CommonSettingsDialog extends AbstractButtonDialog
 
         comps.add(checkboxEntry(defaultAutoEjectDisabled, null));
         comps.add(checkboxEntry(useAverageSkills, null));
-        comps.add(checkboxEntry(useGPinUnitSelection,
-              "This changes the BV/PV displayed in the unit selection list. It does not change the pilot/gunnery of the mek once selected. Request restart of Megamek."));
         comps.add(checkboxEntry(generateNames, null));
 
         addLineSpacer(comps);
@@ -2188,8 +2309,6 @@ public class CommonSettingsDialog extends AbstractButtonDialog
 
         comps.add(checkboxEntry(showIPAddressesInChat,
               Messages.getString("CommonSettingsDialog.showIPAddressesInChat.tooltip")));
-        comps.add(checkboxEntry(startSearchlightsOn,
-              Messages.getString("CommonSettingsDialog.startSearchlightsOn.tooltip")));
         comps.add(checkboxEntry(spritesOnly,
               Messages.getString("CommonSettingsDialog.spritesOnly.tooltip")));
         return createSettingsPanel(comps);
@@ -2201,6 +2320,20 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         List<Component> row = new ArrayList<>();
         row.add(checkbox);
         return row;
+    }
+
+    /**
+     * Greys out the toast timing and report-echo controls when toasts are switched off entirely, since none of them
+     * have any effect in that state.
+     *
+     * @param enabled {@code true} when board toasts are switched on
+     */
+    private void setToastControlsEnabled(boolean enabled) {
+        toastDurationSpinner.setEnabled(enabled);
+        toastDurationLabel.setEnabled(enabled);
+        toastDripSpinner.setEnabled(enabled);
+        toastDripLabel.setEnabled(enabled);
+        toastReportEvents.setEnabled(enabled);
     }
 
     private void addLineSpacer(List<List<Component>> comps) {
@@ -2299,12 +2432,10 @@ public class CommonSettingsDialog extends AbstractButtonDialog
             reportKeywordsTextPane.setText(CLIENT_PREFERENCES.getReportKeywords());
             reportFilterKeywordsTextPane.setText(CLIENT_PREFERENCES.getReportFilterKeywords());
             showIPAddressesInChat.setSelected(CLIENT_PREFERENCES.getShowIPAddressesInChat());
-            startSearchlightsOn.setSelected(CLIENT_PREFERENCES.getStartSearchlightsOn());
             spritesOnly.setSelected(CLIENT_PREFERENCES.getSpritesOnly());
 
             defaultAutoEjectDisabled.setSelected(CLIENT_PREFERENCES.defaultAutoEjectDisabled());
             useAverageSkills.setSelected(CLIENT_PREFERENCES.useAverageSkills());
-            useGPinUnitSelection.setSelected(CLIENT_PREFERENCES.useGPinUnitSelection());
             generateNames.setSelected(CLIENT_PREFERENCES.generateNames());
             showUnitId.setSelected(CLIENT_PREFERENCES.getShowUnitId());
             showAutoResolvePanel.setSelected(CLIENT_PREFERENCES.getShowAutoResolvePanel());
@@ -2359,7 +2490,7 @@ public class CommonSettingsDialog extends AbstractButtonDialog
 
             gameSummaryBV.setSelected(GUIP.getGameSummaryBoardView());
             gameSummaryMM.setSelected(GUIP.getGameSummaryMinimap());
-            gifGameSummaryMM.setSelected(GUIP.getGifGameSummaryMinimap());
+            gifGameSummaryRecording.setSelectedIndex(GUIP.getGifGameSummaryRecording().ordinal());
             skinFiles.removeAllItems();
             ArrayList<String> xmlFiles = new ArrayList<>(filteredFiles(Configuration.skinsDir(), ".xml"));
 
@@ -2528,6 +2659,8 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         csbBoardTextColor.setColour(GUIP.getBoardTextColor());
         csbBoardSpaceTextColor.setColour(GUIP.getBoardSpaceTextColor());
         csbLowFoliageColor.setColour(GUIP.getLowFoliageColor());
+        csbDemolitionChargeColor.setColour(GUIP.getDemolitionChargeColor());
+        demolitionChargeHazardOutline.setSelected(GUIP.getDemolitionChargeHazardOutline());
         csbMapSheetColor.setColour(GUIP.getMapsheetColor());
 
         attackArrowTransparency.setValue(GUIP.getAttackArrowTransparency());
@@ -2543,6 +2676,7 @@ public class CommonSettingsDialog extends AbstractButtonDialog
 
         artilleryDisplayMisses.setSelected(GUIP.getShowArtilleryMisses());
         artilleryDisplayDriftedHits.setSelected(GUIP.getShowArtilleryDrifts());
+        artilleryDisplayDriftArrows.setSelected(GUIP.getShowArtilleryDriftArrows());
         bombsDisplayMisses.setSelected(GUIP.getShowBombMisses());
         bombsDisplayDrifts.setSelected(GUIP.getShowBombDrifts());
 
@@ -2647,6 +2781,12 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         planetaryConditionsShowIndicators.setSelected(GUIP.getPlanetaryConditionsShowIndicators());
         planetaryConditionsBackgroundTransparency.setValue(GUIP.getPlanetaryConditionsBackgroundTransparency());
 
+        toastEnabled.setSelected(GUIP.getToastEnabled());
+        toastDurationSpinner.setValue(clampToastSeconds(GUIP.getToastDurationSeconds()));
+        toastDripSpinner.setValue(clampToastSeconds(GUIP.getToastDripSeconds()));
+        toastReportEvents.setSelected(GUIP.getToastReportEvents());
+        setToastControlsEnabled(toastEnabled.isSelected());
+
         traceOverlayTransparencySlider.setValue(GUIP.getTraceOverlayTransparency());
         traceOverlayScaleSlider.setValue(GUIP.getTraceOverlayScale());
         traceOverlayOriginXSlider.setValue(GUIP.getTraceOverlayOriginX());
@@ -2727,6 +2867,8 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         GUIP.setBoardTextColor(csbBoardTextColor.getColour());
         GUIP.setBoardSpaceTextColor(csbBoardSpaceTextColor.getColour());
         GUIP.setLowFoliageColor(csbLowFoliageColor.getColour());
+        GUIP.setDemolitionChargeColor(csbDemolitionChargeColor.getColour());
+        GUIP.setDemolitionChargeHazardOutline(demolitionChargeHazardOutline.isSelected());
         GUIP.setMapSheetColor(csbMapSheetColor.getColour());
 
         GUIP.setAttackArrowTransparency((Integer) attackArrowTransparency.getValue());
@@ -2744,6 +2886,7 @@ public class CommonSettingsDialog extends AbstractButtonDialog
 
         GUIP.setShowArtilleryMisses(artilleryDisplayMisses.isSelected());
         GUIP.setShowArtilleryDrifts(artilleryDisplayDriftedHits.isSelected());
+        GUIP.setShowArtilleryDriftArrows(artilleryDisplayDriftArrows.isSelected());
         GUIP.setShowBombMisses(bombsDisplayMisses.isSelected());
         GUIP.setShowBombDrifts(bombsDisplayDrifts.isSelected());
 
@@ -2794,12 +2937,10 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         CLIENT_PREFERENCES.setReportKeywords(reportKeywordsTextPane.getText());
         CLIENT_PREFERENCES.setReportFilterKeywords(reportFilterKeywordsTextPane.getText());
         CLIENT_PREFERENCES.setShowIPAddressesInChat(showIPAddressesInChat.isSelected());
-        CLIENT_PREFERENCES.setStartSearchlightsOn(startSearchlightsOn.isSelected());
         CLIENT_PREFERENCES.setSpritesOnly(spritesOnly.isSelected());
         CLIENT_PREFERENCES.setEnableExperimentalBotFeatures(enableExperimentalBotFeatures.isSelected());
         CLIENT_PREFERENCES.setDefaultAutoEjectDisabled(defaultAutoEjectDisabled.isSelected());
         CLIENT_PREFERENCES.setUseAverageSkills(useAverageSkills.isSelected());
-        CLIENT_PREFERENCES.setUseGpInUnitSelection(useGPinUnitSelection.isSelected());
         CLIENT_PREFERENCES.setGenerateNames(generateNames.isSelected());
         CLIENT_PREFERENCES.setShowUnitId(showUnitId.isSelected());
         CLIENT_PREFERENCES.setShowAutoResolvePanel(showAutoResolvePanel.isSelected());
@@ -2822,7 +2963,13 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         GUIP.setAutoSelectNextUnit(useAutoSelectNext.isSelected());
         GUIP.setGameSummaryBoardView(gameSummaryBV.isSelected());
         GUIP.setGameSummaryMinimap(gameSummaryMM.isSelected());
-        GUIP.setGifGameSummaryMinimap(gifGameSummaryMM.isSelected());
+        int selectedRecordingIndex = gifGameSummaryRecording.getSelectedIndex();
+        GifRecordingMode[] recordingModes = GifRecordingMode.values();
+        boolean isValidRecordingIndex = (selectedRecordingIndex >= 0)
+              && (selectedRecordingIndex < recordingModes.length);
+        GUIP.setGifGameSummaryRecording(isValidRecordingIndex
+              ? recordingModes[selectedRecordingIndex]
+              : GifRecordingMode.ASK);
         GUIP.setShowUnitDisplayNamesOnMinimap(showUnitDisplayNamesOnMinimap.isSelected());
         UITheme newUITheme = (UITheme) uiThemes.getSelectedItem();
         String oldUITheme = GUIP.getUITheme();
@@ -3130,6 +3277,11 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         GUIP.setPlanetaryConditionsBackgroundTransparency(
               (Integer) planetaryConditionsBackgroundTransparency.getValue());
 
+        GUIP.setToastEnabled(toastEnabled.isSelected());
+        GUIP.setToastDurationSeconds((Integer) toastDurationSpinner.getValue());
+        GUIP.setToastDripSeconds((Integer) toastDripSpinner.getValue());
+        GUIP.setToastReportEvents(toastReportEvents.isSelected());
+
         GUIP.setTraceOverlayTransparency(traceOverlayTransparencySlider.getValue());
         GUIP.setTraceOverlayScale(traceOverlayScaleSlider.getValue());
         GUIP.setTraceOverlayOriginX(traceOverlayOriginXSlider.getValue());
@@ -3151,6 +3303,8 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         } else if (source.equals(stampFilenames)) {
             stampFormat.setEnabled(stampFilenames.isSelected());
             stampFormatLabel.setEnabled(stampFilenames.isSelected());
+        } else if (source.equals(toastEnabled)) {
+            setToastControlsEnabled(toastEnabled.isSelected());
         } else if (source.equals(fovInsideEnabled)) {
             GUIP.setFovHighlight(fovInsideEnabled.isSelected());
             fovHighlightAlpha.setEnabled(fovInsideEnabled.isSelected());
@@ -3798,17 +3952,30 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         return panel;
     }
 
+    // Advanced-preference keys deliberately hidden from the Advanced settings list: testing/debug gates that must only
+    // be enabled by manually editing clientsettings.xml, never via the UI. They keep their "Advanced" prefix so the
+    // value still loads from clientsettings.xml; they are simply filtered out of the displayed list here.
+    // (AdvancedRevealAllArtilleryRounds is the legacy key for the now-renamed RevealAllArtilleryRounds gate.)
+    private static final Set<String> HIDDEN_ADVANCED_OPTIONS = Set.of(
+          "AdvancedRevealAllArtilleryRounds",
+          "AdvancedShowBotArtilleryHeatMap",
+          "AdvancedRevealObscuredArtillery");
+
     private JPanel getAdvancedSettingsPanel() {
         JPanel p = new JPanel();
 
-        String[] s = GUIP.getAdvancedProperties();
-        AdvancedOptionData[] opts = new AdvancedOptionData[s.length];
-        for (int i = 0;
-              i < s.length;
-              i++) {
-            s[i] = s[i].substring(s[i].indexOf("Advanced") + 8);
-            opts[i] = new AdvancedOptionData(s[i]);
+        String[] advancedProperties = GUIP.getAdvancedProperties();
+        List<AdvancedOptionData> visibleOptions = new ArrayList<>();
+        for (String advancedProperty : advancedProperties) {
+            // Skip deliberately-hidden testing gates so they never appear in the Advanced list - they are controlled
+            // only by manually editing clientsettings.xml.
+            if (HIDDEN_ADVANCED_OPTIONS.contains(advancedProperty)) {
+                continue;
+            }
+            visibleOptions.add(new AdvancedOptionData(
+                  advancedProperty.substring(advancedProperty.indexOf("Advanced") + 8)));
         }
+        AdvancedOptionData[] opts = visibleOptions.toArray(new AdvancedOptionData[0]);
         Arrays.sort(opts);
         advancedKeys = new JList<>(opts);
         advancedKeys.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
@@ -3850,9 +4017,9 @@ public class CommonSettingsDialog extends AbstractButtonDialog
     @Override
     public void stateChanged(ChangeEvent evt) {
         if (evt.getSource().equals(fovHighlightAlpha)) {
-            GUIP.setFovHighlightAlpha(Math.max(0, Math.min(255, fovHighlightAlpha.getValue())));
+            GUIP.setFovHighlightAlpha(Math.clamp(fovHighlightAlpha.getValue(), 0, 255));
         } else if (evt.getSource().equals(fovDarkenAlpha)) {
-            GUIP.setFovDarkenAlpha(Math.max(0, Math.min(255, fovDarkenAlpha.getValue())));
+            GUIP.setFovDarkenAlpha(Math.clamp(fovDarkenAlpha.getValue(), 0, 255));
         } else if (evt.getSource().equals(numStripesSlider)) {
             GUIP.setFovStripes(numStripesSlider.getValue());
         } else if (evt.getSource().equals(traceOverlayTransparencySlider)) {
