@@ -1,7 +1,7 @@
 /*
  * Copyright (C) 2000-2006 Ben Mazur (bmazur@sev.org)
  * Copyright (C) 2013 Edward Cullen (eddy@obsessedcomputers.co.uk)
- * Copyright (C) 2002-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2002-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -95,10 +95,11 @@ import megamek.MMConstants;
 import megamek.SuiteConstants;
 import megamek.client.AbstractClient;
 import megamek.client.Client;
+import megamek.client.bot.AIType;
 import megamek.client.bot.BotClient;
+import megamek.client.bot.BotFactory;
 import megamek.client.bot.princess.BehaviorSettings;
 import megamek.client.bot.princess.BehaviorSettingsFactory;
-import megamek.client.bot.princess.Princess;
 import megamek.client.bot.ui.swing.BotGUI;
 import megamek.client.generator.RandomCallsignGenerator;
 import megamek.client.generator.RandomNameGenerator;
@@ -110,10 +111,10 @@ import megamek.client.ui.clientGUI.CloseAction;
 import megamek.client.ui.clientGUI.GUIPreferences;
 import megamek.client.ui.clientGUI.IMapSettingsObserver;
 import megamek.client.ui.clientGUI.boardview.BoardView;
+import megamek.client.ui.clientGUI.boardview.RulerDialog;
 import megamek.client.ui.clientGUI.boardview.toolTip.TWBoardViewTooltip;
 import megamek.client.ui.dialogs.InformDialog;
 import megamek.client.ui.dialogs.MMDialogs.MMConfirmDialog;
-import megamek.client.ui.dialogs.RulerDialog;
 import megamek.client.ui.dialogs.abstractDialogs.AutoResolveChanceDialog;
 import megamek.client.ui.dialogs.abstractDialogs.AutoResolveProgressDialog;
 import megamek.client.ui.dialogs.advancedSearchMap.AdvancedSearchMapDialog;
@@ -147,6 +148,8 @@ import megamek.common.equipment.BombLoadout;
 import megamek.common.event.GameCFREvent;
 import megamek.common.event.GamePhaseChangeEvent;
 import megamek.common.event.GameSettingsChangeEvent;
+import megamek.common.event.board.GameBoardNewEvent;
+import megamek.common.event.entity.GameEntityChangeEvent;
 import megamek.common.event.entity.GameEntityNewEvent;
 import megamek.common.event.player.GamePlayerChangeEvent;
 import megamek.common.force.Force;
@@ -158,6 +161,7 @@ import megamek.common.loaders.MapSettings;
 import megamek.common.loaders.MapSetup;
 import megamek.common.loaders.MekSummary;
 import megamek.common.loaders.MekSummaryCache;
+import megamek.common.options.IBasicOption;
 import megamek.common.options.IOption;
 import megamek.common.options.OptionsConstants;
 import megamek.common.options.PilotOptions;
@@ -226,6 +230,8 @@ public class ChatLounge extends AbstractPhaseDisplay
     public JScrollPane scrMekTable;
     private final MMToggleButton butCompact = new MMToggleButton(Messages.getString("ChatLounge.butCompact"));
     private final MMToggleButton butShowUnitID = new MMToggleButton(Messages.getString("ChatLounge.butShowUnitID"));
+    /** Takes and gives up the gamemaster role, and shows who holds it. */
+    private final MMToggleButton butGameMaster = new MMToggleButton(Messages.getString("ChatLounge.butGameMaster"));
     private final JToggleButton butListView = new JToggleButton(Messages.getString("ChatLounge.butSortableView"));
     private final JToggleButton butForceView = new JToggleButton(Messages.getString("ChatLounge.butForceView"));
     private final JButton butCollapse = new JButton(Messages.getString("ChatLounge.butCollapse"));
@@ -244,7 +250,10 @@ public class ChatLounge extends AbstractPhaseDisplay
     private final JButton butAddBot = new JButton(Messages.getString("ChatLounge.butAddBot"));
     private final JButton butRemoveBot = new JButton(Messages.getString("ChatLounge.butRemoveBot"));
     private final JButton butConfigPlayer = new JButton(Messages.getString("ChatLounge.butConfigPlayer"));
+    private final JButton butVictory = new JButton(Messages.getString("ChatLounge.butVictory"));
     private final JButton butBotSettings = new JButton(Messages.getString("ChatLounge.butBotSettings"));
+    private FixedYPanel panBotInfo;
+    private VictoryConditionsDialog victoryConditionsDialog;
     PlayerSettingsDialog psd;
 
     private final transient MekTableMouseAdapter mekTableMouseAdapter = new MekTableMouseAdapter();
@@ -294,6 +303,7 @@ public class ChatLounge extends AbstractPhaseDisplay
 
     private JComboBox<Comparable<?>> comMapSizes;
     private final JButton butBoardPreview = new JButton(Messages.getString("BoardSelectionDialog.ViewGameBoard"));
+    private final JButton butGenerateBattlefield = new JButton(Messages.getString("ChatLounge.GenerateBattlefield"));
     private final JPanel panMapButtons = new JPanel();
     private final JLabel lblBoardsAvailable = new JLabel();
     private JList<String> lisBoardsAvailable;
@@ -341,7 +351,7 @@ public class ChatLounge extends AbstractPhaseDisplay
     transient LobbyKeyDispatcher lobbyKeyDispatcher = new LobbyKeyDispatcher(this);
 
     private static final String CL_KEY_FILE_EXTENSION_XML = ".xml";
-    private static final String CL_KEY_FILEPATH_MAP_ASSEMBLY_HELP = "docs/help/en/Map and Board Stuff/MapAssemblyHelp.html";
+    private static final String CL_KEY_FILEPATH_MAP_ASSEMBLY_HELP = "docs/Customization/MegaMek/Map and Board Stuff/MapAssemblyHelp.html";
     private static final String CL_KEY_FILEPATH_MAP_SETUP = "/mapsetup";
     private static final String CL_KEY_NAME_HELP_PANE = "helpPane";
 
@@ -355,6 +365,9 @@ public class ChatLounge extends AbstractPhaseDisplay
     private static final String CL_ACTION_COMMAND_CONFIGURE = "CONFIGURE";
     private static final String CL_ACTION_COMMAND_AUTO_RESOLVE = "AUTORESOLVE";
     private static final String CL_ACTION_COMMAND_CAMO = "camo";
+
+    /** The chat command that takes or gives up the gamemaster role. */
+    private static final String GAME_MASTER_COMMAND = "/gm";
 
     private static final GUIPreferences GUIP = GUIPreferences.getInstance();
     private static final ClientPreferences CLIENT_PREFERENCES = PreferenceManager.getClientPreferences();
@@ -389,6 +402,7 @@ public class ChatLounge extends AbstractPhaseDisplay
         setupUnitsPanel();
         setupMapPanel();
         refreshLabels();
+        refreshGameMasterButton();
         setupListeners();
     }
 
@@ -404,6 +418,12 @@ public class ChatLounge extends AbstractPhaseDisplay
         GUIP.addPreferenceChangeListener(this);
         PreferenceManager.getClientPreferences().addPreferenceChangeListener(this);
         MekSummaryCache.getInstance().addListener(mekSummaryCacheListener);
+        // The cache may have finished loading between setupUnitConfig() reading its state and the listener
+        // being registered just above. Without this check that notification is missed and the buttons that
+        // need the cache stay disabled for the rest of the lobby.
+        if (MekSummaryCache.getInstance().isInitialized()) {
+            enableUnitAddButtons();
+        }
         clientgui.getClient().getGame().addGameListener(this);
         clientgui.boardViews().forEach(bv -> bv.addBoardViewListener(this));
 
@@ -430,10 +450,12 @@ public class ChatLounge extends AbstractPhaseDisplay
         butAddBot.addActionListener(lobbyListener);
         butArmy.addActionListener(lobbyListener);
         butBoardPreview.addActionListener(lobbyListener);
+        butGenerateBattlefield.addActionListener(lobbyListener);
         butBotSettings.addActionListener(lobbyListener);
         butCompact.addActionListener(lobbyListener);
         butConditions.addActionListener(lobbyListener);
         butConfigPlayer.addActionListener(lobbyListener);
+        butVictory.addActionListener(lobbyListener);
         butLoadList.addActionListener(lobbyListener);
         butNames.addActionListener(lobbyListener);
         butOptions.addActionListener(lobbyListener);
@@ -442,6 +464,7 @@ public class ChatLounge extends AbstractPhaseDisplay
         butSaveList.addActionListener(lobbyListener);
         butPrintList.addActionListener(lobbyListener);
         butShowUnitID.addActionListener(lobbyListener);
+        butGameMaster.addActionListener(lobbyListener);
         butSkills.addActionListener(lobbyListener);
         butSpaceSize.addActionListener(lobbyListener);
         butCamo.addActionListener(camoListener);
@@ -469,12 +492,12 @@ public class ChatLounge extends AbstractPhaseDisplay
 
         fldMapWidth.addActionListener(lobbyListener);
         fldMapHeight.addActionListener(lobbyListener);
-        fldMapWidth.addFocusListener(focusListener);
-        fldMapHeight.addFocusListener(focusListener);
+        fldMapWidth.addFocusListener(lobbyFocusListener);
+        fldMapHeight.addFocusListener(lobbyFocusListener);
         fldSpaceBoardWidth.addActionListener(lobbyListener);
         fldSpaceBoardHeight.addActionListener(lobbyListener);
-        fldSpaceBoardWidth.addFocusListener(focusListener);
-        fldSpaceBoardHeight.addFocusListener(focusListener);
+        fldSpaceBoardWidth.addFocusListener(lobbyFocusListener);
+        fldSpaceBoardHeight.addFocusListener(lobbyFocusListener);
 
         comboTeam.addActionListener(lobbyListener);
 
@@ -483,7 +506,7 @@ public class ChatLounge extends AbstractPhaseDisplay
     }
 
     /** Applies changes to the board and map size when the text fields lose focus. */
-    FocusListener focusListener = new FocusAdapter() {
+    FocusListener lobbyFocusListener = new FocusAdapter() {
 
         @Override
         public void focusLost(FocusEvent e) {
@@ -509,9 +532,7 @@ public class ChatLounge extends AbstractPhaseDisplay
         CamoChooserDialog ccd = new CamoChooserDialog(clientgui.getFrame(), player.getCamouflage());
         try {
             java.util.List<Entity> playerEntities = game().getPlayerEntities(player, false);
-            if (!playerEntities.isEmpty()) {
-                ccd.setDisplayedEntity(CollectionUtil.anyOneElement(playerEntities));
-            }
+            ccd.setDisplayedEntities(playerEntities);
             // If the dialog was canceled or nothing selected, do nothing
             if (!ccd.showDialog().isConfirmed()) {
                 return;
@@ -579,15 +600,30 @@ public class ChatLounge extends AbstractPhaseDisplay
         bvSorters.add(new PlayerBVSorter(clientgui, Sorting.DESCENDING));
         bvSorters.add(new BVSorter(Sorting.ASCENDING));
         bvSorters.add(new BVSorter(Sorting.DESCENDING));
-        activeSorter = unitSorters.get(0);
+        activeSorter = unitSorters.getFirst();
     }
 
     /** Enables buttons to allow adding units when the MSC has finished loading. */
-    private final transient MekSummaryCache.Listener mekSummaryCacheListener = () -> {
+    private final transient MekSummaryCache.Listener mekSummaryCacheListener = this::enableUnitAddButtons;
+
+    /**
+     * Enables the buttons that need a loaded unit cache to work.
+     * <p>
+     * Both callers can run off the event dispatch thread: the unit cache notifies its listeners from its loader
+     * thread, and the lobby is constructed from the phase change, which is dispatched on the client's connection
+     * thread. The button updates are therefore moved onto the event dispatch thread here, so that every caller is
+     * covered.
+     * </p>
+     */
+    private void enableUnitAddButtons() {
+        if (!SwingUtilities.isEventDispatchThread()) {
+            SwingUtilities.invokeLater(this::enableUnitAddButtons);
+            return;
+        }
         butAdd.setEnabled(true);
         butArmy.setEnabled(true);
         butLoadList.setEnabled(true);
-    };
+    }
 
     /** Sets up the Mek Table and Mek Tree. */
     private void setupEntities() {
@@ -672,14 +708,18 @@ public class ChatLounge extends AbstractPhaseDisplay
         panPlayerInfo = new FixedYPanel(new GridLayout(1, 2, 2, 2));
         panPlayerInfo.setBorder(BorderFactory.createTitledBorder(Messages.getString("ChatLounge.name.playerSetup")));
 
-        JPanel panPlayerInfoBts = new JPanel(new GridLayout(4, 1, 2, 2));
+        JPanel panPlayerInfoBts = new JPanel(new GridLayout(3, 1, 2, 2));
         panPlayerInfoBts.add(comboTeam);
         panPlayerInfoBts.add(butConfigPlayer);
-        panPlayerInfoBts.add(butAddBot);
-        panPlayerInfoBts.add(butRemoveBot);
+        panPlayerInfoBts.add(butVictory);
 
         panPlayerInfo.add(panPlayerInfoBts);
         panPlayerInfo.add(butCamo);
+
+        panBotInfo = new FixedYPanel(new GridLayout(1, 2, 2, 2));
+        panBotInfo.setBorder(BorderFactory.createTitledBorder(Messages.getString("ChatLounge.name.botSetup")));
+        panBotInfo.add(butAddBot);
+        panBotInfo.add(butRemoveBot);
 
         refreshPlayerTable();
     }
@@ -763,6 +803,8 @@ public class ChatLounge extends AbstractPhaseDisplay
         leftSide.add(Box.createVerticalStrut(scaleForGUI(5)));
         leftSide.add(panPlayerInfo);
         leftSide.add(Box.createVerticalStrut(scaleForGUI(5)));
+        leftSide.add(panBotInfo);
+        leftSide.add(Box.createVerticalStrut(scaleForGUI(5)));
         leftSide.add(panAutoResolveInfo);
         leftSide.add(Box.createVerticalStrut(scaleForGUI(5)));
         leftSide.add(scrPlayers);
@@ -776,6 +818,8 @@ public class ChatLounge extends AbstractPhaseDisplay
         topRight.add(Box.createHorizontalStrut(30));
         topRight.add(butCollapse);
         topRight.add(butExpand);
+        topRight.add(Box.createHorizontalStrut(30));
+        topRight.add(butGameMaster);
 
         JPanel rightSide = new JPanel();
         rightSide.setLayout(new BoxLayout(rightSide, BoxLayout.PAGE_AXIS));
@@ -870,11 +914,13 @@ public class ChatLounge extends AbstractPhaseDisplay
 
         FixedYPanel bottomPanel = new FixedYPanel();
         bottomPanel.setBorder(new EmptyBorder(10, 0, 0, 0));
+        bottomPanel.add(butGenerateBattlefield);
         bottomPanel.add(butBoardPreview);
         bottomPanel.add(butSaveMapSetup);
         bottomPanel.add(butLoadMapSetup);
 
         butBoardPreview.setToolTipText(Messages.getString("BoardSelectionDialog.ViewGameBoardTooltip"));
+        butGenerateBattlefield.setToolTipText(Messages.getString("ChatLounge.GenerateBattlefieldTooltip"));
 
         // The left side panel including the game map preview
         JPanel panMapPreview = new JPanel();
@@ -958,10 +1004,7 @@ public class ChatLounge extends AbstractPhaseDisplay
 
             RulerDialog.color1 = GUIP.getRulerColor1();
             RulerDialog.color2 = GUIP.getRulerColor2();
-            RulerDialog ruler = new RulerDialog(clientgui.getFrame(), client(), previewBV, boardPreviewGame);
-            ruler.setLocation(GUIP.getRulerPosX(), GUIP.getRulerPosY());
-            ruler.setSize(GUIP.getRulerSizeHeight(), GUIP.getRulerSizeWidth());
-            UIUtil.updateWindowBounds(ruler);
+            RulerDialog ruler = new RulerDialog(clientgui.getFrame(), previewBV, boardPreviewGame);
 
             // Most boards will be far too large on the standard zoom
             previewBV.zoomOut();
@@ -1134,6 +1177,7 @@ public class ChatLounge extends AbstractPhaseDisplay
         butLoadMapSetup.setEnabled(!inSpace);
         butMapShrinkW.setEnabled(mapSettings.getMapWidth() > 1);
         butMapShrinkH.setEnabled(mapSettings.getMapHeight() > 1);
+        refreshGenerateBattlefieldButton();
         butAdvancedSearchMap.setEnabled(!inSpace &&
               (mapSettings.getMapWidth() == 1) &&
               (mapSettings.getMapHeight() == 1));
@@ -1272,7 +1316,7 @@ public class ChatLounge extends AbstractPhaseDisplay
                         String boardForImage = boardName;
                         // For a surprise board, just use the first board as example
                         if (boardName.startsWith(MapSettings.BOARD_SURPRISE)) {
-                            boardForImage = extractSurpriseMaps(boardName).get(0);
+                            boardForImage = extractSurpriseMaps(boardName).getFirst();
                         }
 
                         boolean rotateBoard = false;
@@ -1368,8 +1412,48 @@ public class ChatLounge extends AbstractPhaseDisplay
         g.dispose();
     }
 
+    /**
+     * Enables the Generate Battlefield button only while it can actually be used, mirroring the server's checks:
+     * building the board with a Surprise board selected would reveal the surprise, and an incomplete board
+     * selection (unset slots right after a map size change) cannot be built. In both cases the server refuses
+     * the request, so the button is disabled with an explanatory tooltip instead of allowing a silent no-op.
+     */
+    private void refreshGenerateBattlefieldButton() {
+        // Board slots may be null right after a map size change, before the server fills them in
+        boolean hasSurpriseBoard = mapSettings.getBoardsSelectedVector().stream()
+              .anyMatch(boardName -> (boardName != null) && boardName.startsWith(MapSettings.BOARD_SURPRISE));
+        boolean hasUnsetBoard = mapSettings.getBoardsSelectedVector().stream().anyMatch(Objects::isNull);
+        butGenerateBattlefield.setEnabled(!hasSurpriseBoard && !hasUnsetBoard);
+
+        String tooltipKey;
+        if (hasSurpriseBoard) {
+            tooltipKey = "ChatLounge.GenerateBattlefieldTooltipSurprise";
+        } else if (hasUnsetBoard) {
+            tooltipKey = "ChatLounge.GenerateBattlefieldTooltipIncomplete";
+        } else {
+            tooltipKey = "ChatLounge.GenerateBattlefieldTooltip";
+        }
+        butGenerateBattlefield.setToolTipText(Messages.getString(tooltipKey));
+    }
+
+    /**
+     * @return the battlefield built by the server in the lobby, or {@code null} if none was built (or it was
+     *       discarded after a settings change), in which case the preview falls back to a local roll
+     */
+    private @Nullable Board serverGeneratedBoard() {
+        Board board = client().getGame().getBoard();
+        boolean hasServerBoard = (board != null) && (board.getWidth() > 0) && (board.getHeight() > 0);
+        return hasServerBoard ? board : null;
+    }
+
     public void previewGameBoard() {
-        Board newBoard = ServerBoardHelper.getPossibleGameBoard(mapSettings, false);
+        Board serverBoard = serverGeneratedBoard();
+        if (serverBoard == null) {
+            LOGGER.debug("[LobbyBoard] no server-built battlefield - preview uses a local roll of the map settings");
+        }
+        Board newBoard = (serverBoard != null)
+              ? serverBoard
+              : ServerBoardHelper.getPossibleGameBoard(mapSettings, false);
         boardPreviewGame.setBoard(newBoard);
         previewBV.setLocalPlayer(client().getLocalPlayer());
         final var gOpts = game().getOptions();
@@ -1413,7 +1497,9 @@ public class ChatLounge extends AbstractPhaseDisplay
         java.util.List<Integer> enIds = getSelectedEntities().stream().map(Entity::getId).toList();
         mekModel.clearData();
         ArrayList<Entity> allEntities = new ArrayList<>(clientgui.getClient().getEntitiesVector());
-        allEntities.sort(activeSorter);
+        // Whatever the player is sorting by, a train stays together: the choice is applied to the tractor and its
+        // trailers follow it. Sorting by tonnage would otherwise strand a 10 ton carriage far from its tractor.
+        allEntities.sort(MekTableSorter.keepingCarriedUnitsTogether(activeSorter));
 
         boolean localUnits = false;
         var opts = clientgui.getClient().getGame().getOptions();
@@ -1612,7 +1698,9 @@ public class ChatLounge extends AbstractPhaseDisplay
         if (trailer.getTowedBy() == Entity.NONE) {
             return;
         }
-        Entity tractor = game().getEntity(trailer.getTowedBy());
+        // Detaching mid-train affects the whole train, so work from the tractor heading it rather than from the
+        // trailer immediately in front, which would leave the rest of the train out of the update.
+        Entity tractor = game().getEntity(trailer.getTractor());
         disconnectTrain(tractor, trailer, updateCandidates);
     }
 
@@ -1640,7 +1728,15 @@ public class ChatLounge extends AbstractPhaseDisplay
 
     private void disconnectTrain(Entity tractor, Entity trailer, Collection<Entity> updateCandidates) {
         if (tractor != null && trailer != null) {
-            List<Integer> otherTowedUnitIds = tractor.getAllTowedUnits();
+            // An off board train stays hooked up. There is no board position to drop a trailer at, and the train is
+            // the only thing holding the trailer's place off the map edge.
+            if (tractor.isOffBoard() || trailer.isOffBoard()) {
+                LobbyErrors.showNoDetachOffBoard(clientgui.getFrame());
+                return;
+            }
+            // Copy the ids: disconnectUnit drops the detached trailers from this list as it works, and walking
+            // the live view afterwards fails with a ConcurrentModificationException.
+            List<Integer> otherTowedUnitIds = new ArrayList<>(tractor.getAllTowedUnits());
             tractor.disconnectUnit(trailer.getId());
             updateCandidates.add(trailer);
             updateCandidates.add(tractor);
@@ -1732,6 +1828,7 @@ public class ChatLounge extends AbstractPhaseDisplay
      *
      * @see #isEditable(Entity)
      */
+    @Deprecated(since = "0.51.0", forRemoval = true)
     boolean isNotEditable(Entity entity) {
         return !isEditable(entity);
     }
@@ -1807,9 +1904,37 @@ public class ChatLounge extends AbstractPhaseDisplay
         clientgui.getClient().sendServerChat(Player.PLAYER_NONE, msg);
     }
 
+    /**
+     * Assigns the double-clicked entry of the available-boards list to the first board slot, as if it had been
+     * dragged onto the map preview button. The map preview then shows the board through the usual refresh.
+     *
+     * @param listIndex the index of the double-clicked entry in the available-boards list
+     */
+    private void selectBoardFromList(int listIndex) {
+        String boardName = lisBoardsAvailable.getModel().getElementAt(listIndex);
+        LOGGER.debug("[LobbyBoard] double-click assigns {} to the first board slot", boardName);
+        changeMapDnD(boardName, mapButtons.getFirst());
+    }
+
     //
     // GameListener
     //
+    @Override
+    public void gameBoardNew(GameBoardNewEvent e) {
+        if (isIgnoringEvents()) {
+            return;
+        }
+        // The server built (or discarded) the lobby battlefield - update an open preview to match.
+        // This event arrives on the network thread; the preview is Swing, so hop onto the EDT.
+        LOGGER.debug("[LobbyBoard] board {} received from the server ({}x{})", e.getBoardId(),
+              e.getNewBoard().getWidth(), e.getNewBoard().getHeight());
+        SwingUtilities.invokeLater(() -> {
+            if ((boardPreviewW != null) && boardPreviewW.isVisible()) {
+                previewGameBoard();
+            }
+        });
+    }
+
     @Override
     public void gamePlayerChange(GamePlayerChangeEvent e) {
         if (isIgnoringEvents()) {
@@ -1820,6 +1945,7 @@ public class ChatLounge extends AbstractPhaseDisplay
         refreshPlayerTable();
         refreshPlayerConfig();
         refreshCamoButton();
+        refreshGameMasterButton();
         refreshEntities();
         panTeamOverview.refreshData();
     }
@@ -1857,12 +1983,24 @@ public class ChatLounge extends AbstractPhaseDisplay
     }
 
     @Override
+    public void gameEntityChange(GameEntityChangeEvent e) {
+        if (isIgnoringEvents()) {
+            return;
+        }
+        // A unit's shown state may have changed - its damage, and so its damage decal, most of all. Without this
+        // the lobby table and tree kept drawing the unit as it was, since nothing else redrew them on a change.
+        refreshEntities();
+    }
+
+    @Override
     public void gameSettingsChange(GameSettingsChangeEvent e) {
         // Are we ignoring events?
         if (isIgnoringEvents()) {
             return;
         }
         refreshGameSettings();
+        // the Allow Game Master option lives in the game settings, so the button that offers the role tracks it here
+        refreshGameMasterButton();
         // The table sorting may no longer be allowed (e.g. when blind drop was
         // activated)
         if (!activeSorter.isAllowed(clientgui.getClient().getGame().getOptions())) {
@@ -1920,12 +2058,16 @@ public class ChatLounge extends AbstractPhaseDisplay
                 lobbyActions.changeTeam(getSelectedPlayers(), comboTeam.getSelectedIndex());
             } else if (ev.getSource().equals(butConfigPlayer)) {
                 configPlayer();
+            } else if (ev.getSource().equals(butVictory)) {
+                showVictoryConditionsDialog();
             } else if (ev.getSource().equals(butBotSettings)) {
                 doBotSettings();
             } else if (ev.getSource().equals(butOptions)) {
                 clientgui.getGameOptionsDialog().setEditable(true);
                 clientgui.getGameOptionsDialog().update(clientgui.getClient().getGame().getOptions());
                 clientgui.getGameOptionsDialog().setVisible(true);
+            } else if (ev.getSource().equals(butGameMaster)) {
+                toggleGameMaster();
             } else if (ev.getSource().equals(butCompact)) {
                 toggleCompact();
             } else if (ev.getSource().equals(butLoadList)) {
@@ -1984,6 +2126,10 @@ public class ChatLounge extends AbstractPhaseDisplay
 
             } else if (ev.getSource().equals(butBoardPreview)) {
                 previewGameBoard();
+
+            } else if (ev.getSource().equals(butGenerateBattlefield)) {
+                LOGGER.debug("[LobbyBoard] requesting battlefield generation from the server");
+                client().sendLobbyBoardGenerationRequest();
 
             } else if (ev.getSource().equals(comMapSizes)) {
                 if (Messages.getString("ChatLounge.CustomMapSize").equals(comMapSizes.getSelectedItem())) {
@@ -2221,7 +2367,8 @@ public class ChatLounge extends AbstractPhaseDisplay
         if (bcd.getResult() == DialogResult.CANCELLED) {
             return;
         }
-        Princess botClient = Princess.createPrincess(bcd.getBotName(),
+        BotClient botClient = BotFactory.createBot(bcd.getSelectedAIType(),
+              bcd.getBotName(),
               client().getHost(),
               client().getPort(),
               bcd.getBehaviorSettings());
@@ -2311,6 +2458,28 @@ public class ChatLounge extends AbstractPhaseDisplay
         }
     }
 
+    /**
+     * Shows the victory conditions dialog (the former Victory Conditions tab of the game options; the tab is
+     * removed and this dialog is the only place to edit those options). On OK, the changed options are sent to the
+     * server and the full option set is saved to the game options file so the victory conditions persist between
+     * games.
+     */
+    private void showVictoryConditionsDialog() {
+        if (victoryConditionsDialog == null) {
+            victoryConditionsDialog = new VictoryConditionsDialog(clientgui);
+        }
+        victoryConditionsDialog.refreshLobbyState();
+        if (victoryConditionsDialog.showDialog() == DialogResult.CONFIRMED) {
+            Vector<IBasicOption> changedOptions = victoryConditionsDialog.getChangedVictoryOptions();
+            if (!changedOptions.isEmpty()) {
+                clientgui.getClient().sendGameOptions(victoryConditionsDialog.getPassword(), changedOptions);
+            }
+            // Persist to the game options file so the victory conditions survive a re-host; the sent options only
+            // update the running server, which reloads defaults from the file when a new game is hosted.
+            victoryConditionsDialog.saveVictoryOptions();
+        }
+    }
+
     private void removeBot() {
         Client c = getSelectedClient();
         if (!client().getBots().containsValue(c)) {
@@ -2326,11 +2495,14 @@ public class ChatLounge extends AbstractPhaseDisplay
 
     private void doBotSettings() {
         Player player = playerModel.getPlayerAt(tablePlayers.getSelectedRow());
-        Princess bot = (Princess) clientgui.getLocalBots().get(player.getName());
+        if (!(clientgui.getLocalBots().get(player.getName()) instanceof BotClient bot)) {
+            return;
+        }
         var bcd = new BotConfigDialog(clientgui.getFrame(),
               bot.getLocalPlayer().getName(),
               bot.getBehaviorSettings(),
-              clientgui);
+              clientgui,
+              bot.getAIType());
         bcd.setVisible(true);
         if (bcd.getResult() == DialogResult.CONFIRMED) {
             bot.setBehaviorSettings(bcd.getBehaviorSettings());
@@ -2509,6 +2681,12 @@ public class ChatLounge extends AbstractPhaseDisplay
 
         boolean done = !localPlayer().isDone();
 
+        // Ask up front (once) whether to record the combat-summary GIF, so recording never has to interrupt play
+        // mid-game. No-op unless the preference is "ask" and no choice has been made for this game yet.
+        if (done) {
+            MinimapPanel.promptForGifRecordingConsent(game, clientgui.getFrame());
+        }
+
         // Save lobby state if setting is enabled, player is marking as done, and we haven't saved yet
         if (done && GUIP.getSaveLobbyOnStart() && !lobbySavePerformed) {
             String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd_HHmmss"));
@@ -2571,6 +2749,7 @@ public class ChatLounge extends AbstractPhaseDisplay
         butAddBot.removeActionListener(lobbyListener);
         butArmy.removeActionListener(lobbyListener);
         butBoardPreview.removeActionListener(lobbyListener);
+        butGenerateBattlefield.removeActionListener(lobbyListener);
         butBotSettings.removeActionListener(lobbyListener);
         butCompact.removeActionListener(lobbyListener);
         butConditions.removeActionListener(lobbyListener);
@@ -2583,6 +2762,7 @@ public class ChatLounge extends AbstractPhaseDisplay
         butSaveList.removeActionListener(lobbyListener);
         butPrintList.removeActionListener(lobbyListener);
         butShowUnitID.removeActionListener(lobbyListener);
+        butGameMaster.removeActionListener(lobbyListener);
         butSkills.removeActionListener(lobbyListener);
         butSpaceSize.removeActionListener(lobbyListener);
         butCamo.removeActionListener(camoListener);
@@ -2833,7 +3013,7 @@ public class ChatLounge extends AbstractPhaseDisplay
             } else if (code == KeyEvent.VK_ENTER) {
                 evt.consume();
                 if (entities.size() == 1) {
-                    lobbyActions.customizeMek(entities.get(0));
+                    lobbyActions.customizeMek(entities.getFirst());
                 } else if (canConfigureMultipleDeployment(entities)) {
                     lobbyActions.customizeMeks(entities);
                 }
@@ -2981,7 +3161,7 @@ public class ChatLounge extends AbstractPhaseDisplay
 
             } else if (code == KeyEvent.VK_ENTER && onlyOneEntity) {
                 e.consume();
-                lobbyActions.customizeMek(selEntities.get(0));
+                lobbyActions.customizeMek(selEntities.getFirst());
 
             } else if (code == KeyEvent.VK_UP && e.getModifiersEx() == InputEvent.CTRL_DOWN_MASK) {
                 e.consume();
@@ -3031,17 +3211,43 @@ public class ChatLounge extends AbstractPhaseDisplay
         }
 
         @Override
+        public void mousePressed(MouseEvent e) {
+            maybeShowPopup(e);
+        }
+
+        @Override
         public void mouseReleased(MouseEvent e) {
-            if (lisBoardsAvailable.isEnabled()) {
-                // If a mouse button is pressed over a map,
-                // show the board selection popup
-                int index = lisBoardsAvailable.locationToIndex(e.getPoint());
-                if (index != -1 && lisBoardsAvailable.getCellBounds(index, index).contains(e.getPoint())) {
-                    if (!lisBoardsAvailable.isSelectedIndex(index)) {
-                        lisBoardsAvailable.setSelectedIndex(index);
-                    }
-                    showPopup(e);
+            maybeShowPopup(e);
+        }
+
+        /**
+         * Shows the board selection popup on a right-click (checked on both press and release, as the popup
+         * trigger is platform-dependent). Left clicks are left alone so that they select boards and can form
+         * a double-click, which opens the board preview instead.
+         */
+        private void maybeShowPopup(MouseEvent e) {
+            if (!e.isPopupTrigger() || !lisBoardsAvailable.isEnabled()) {
+                return;
+            }
+            int index = lisBoardsAvailable.locationToIndex(e.getPoint());
+            if ((index != -1) && lisBoardsAvailable.getCellBounds(index, index).contains(e.getPoint())) {
+                if (!lisBoardsAvailable.isSelectedIndex(index)) {
+                    lisBoardsAvailable.setSelectedIndex(index);
                 }
+                showPopup(e);
+            }
+        }
+
+        @Override
+        public void mouseClicked(MouseEvent e) {
+            boolean isDoubleClick = SwingUtilities.isLeftMouseButton(e) && (e.getClickCount() == 2);
+            if (!lisBoardsAvailable.isEnabled() || !isDoubleClick) {
+                return;
+            }
+            int index = lisBoardsAvailable.locationToIndex(e.getPoint());
+            if ((index != -1) && lisBoardsAvailable.getCellBounds(index, index).contains(e.getPoint())) {
+                closePopup();
+                selectBoardFromList(index);
             }
         }
 
@@ -3330,6 +3536,86 @@ public class ChatLounge extends AbstractPhaseDisplay
     }
 
     /**
+     * Sets burst MG fire on or off on every unit the local player may configure at once: their own units and
+     * their local bots'. The menu bar's shortcut for the per-unit action in the unit right-click menu.
+     */
+    public void setAllBurstMg(boolean burstOn) {
+        lobbyActions.toggleBurstMg(configurableEntities(), burstOn);
+    }
+
+    /**
+     * Sets LRM hot-loading on or off on every unit the local player may configure at once: their own units and
+     * their local bots'. The menu bar's shortcut for the per-unit action in the unit right-click menu.
+     */
+    public void setAllHotLoad(boolean hotLoadOn) {
+        lobbyActions.toggleHotLoad(configurableEntities(), hotLoadOn);
+    }
+
+    /** The units the local player may configure: their own and their local bots'. */
+    private List<Entity> configurableEntities() {
+        List<Entity> configurable = new ArrayList<>();
+        for (Entity entity : clientgui.getClient().getGame().getEntitiesVector()) {
+            if (lobbyActions.isEditable(entity)) {
+                configurable.add(entity);
+            }
+        }
+        return configurable;
+    }
+
+    /**
+     * Asks the server for the gamemaster role, or gives it up when this player already holds it. The request goes
+     * through the same command the chat uses, so the rules for taking the role live in one place: it is put to a
+     * vote of the human players (a lone player's own yes passes at once), and it is refused while another player
+     * holds the role.
+     */
+    private void toggleGameMaster() {
+        client().sendChat(GAME_MASTER_COMMAND);
+        // the button follows the server's answer, not the click, so it is put back until that answer arrives
+        refreshGameMasterButton();
+    }
+
+    /**
+     * Shows who holds the gamemaster role, from what the server last said. Every player sees the same thing,
+     * because the server sends a player update to everyone when the role changes.
+     */
+    private void refreshGameMasterButton() {
+        // The listener is registered once, in setupListeners. Setting a toggle button's state does not fire an
+        // action event, so it does not have to be taken off and put back here.
+        Player gameMaster = null;
+        for (Player player : game().getPlayersList()) {
+            if (player.isGameMaster()) {
+                gameMaster = player;
+                break;
+            }
+        }
+        boolean localPlayerIsGameMaster = (gameMaster != null) && gameMaster.equals(localPlayer());
+
+        // the host decides whether the game has a gamemaster at all, through the Allow Game Master game option
+        boolean gameAllowsGameMaster = game().getOptions()
+              .booleanOption(OptionsConstants.GAME_MASTER_ALLOW);
+
+        // MMToggleButton shows its own green check when selected and red cross when not, so the button needs no
+        // separate check icon of its own; adding one would show a second, redundant check.
+        butGameMaster.setSelected(localPlayerIsGameMaster);
+        if (!gameAllowsGameMaster) {
+            butGameMaster.setText(Messages.getString("ChatLounge.butGameMaster"));
+            butGameMaster.setEnabled(false);
+            butGameMaster.setToolTipText(Messages.getString("ChatLounge.butGameMaster.tooltip.notAllowed"));
+        } else if (gameMaster == null) {
+            butGameMaster.setText(Messages.getString("ChatLounge.butGameMaster"));
+            butGameMaster.setEnabled(true);
+            butGameMaster.setToolTipText(Messages.getString("ChatLounge.butGameMaster.tooltip"));
+        } else {
+            butGameMaster.setText(Messages.getString("ChatLounge.butGameMaster.held", gameMaster.getName()));
+            // only the player holding the role can give it up, and only one player may hold it at a time
+            butGameMaster.setEnabled(localPlayerIsGameMaster);
+            butGameMaster.setToolTipText(Messages.getString(localPlayerIsGameMaster
+                  ? "ChatLounge.butGameMaster.tooltip.held"
+                  : "ChatLounge.butGameMaster.tooltip.heldByOther", gameMaster.getName()));
+        }
+    }
+
+    /**
      * Sets the row height of the MekTable according to compact mode and GUI scale
      */
     private void setTableRowHeights() {
@@ -3474,7 +3760,7 @@ public class ChatLounge extends AbstractPhaseDisplay
         // the first sorter otherwise
         int index = sorters.indexOf(activeSorter);
         if (index == -1) {
-            activeSorter = sorters.get(0);
+            activeSorter = sorters.getFirst();
         } else {
             index = (index + 1) % sorters.size();
             activeSorter = sorters.get(index);
