@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2021-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2021-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -38,11 +38,13 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.StringTokenizer;
 import javax.swing.JFileChooser;
+import javax.swing.JFrame;
 import javax.swing.filechooser.FileNameExtensionFilter;
 
 import megamek.MMConstants;
@@ -122,12 +124,15 @@ public record LobbyMekPopupActions(ChatLounge lobby) implements ActionListener {
             case LMP_HOT_LOAD_OFF:
             case LMP_VRT_LONG:
             case LMP_VRT_SHORT:
+            case LMP_EI_ON:
+            case LMP_EI_OFF:
             case LMP_SQUADRON:
             case LMP_LOAD:
             case LMP_UNLOAD:
             case LMP_UNLOAD_ALL:
             case LMP_DETACH_TRAILER:
             case LMP_DETACH_FROM_TRACTOR:
+            case LMP_CONNECT_TRAIN:
             case LMP_DEPLOY:
             case LMP_ASSIGN:
             case LMP_HEAT:
@@ -275,6 +280,11 @@ public record LobbyMekPopupActions(ChatLounge lobby) implements ActionListener {
                     lobby.lobbyActions.setVRTMode(entities, command.equals(LMP_VRT_LONG));
                     break;
 
+                case LMP_EI_ON:
+                case LMP_EI_OFF:
+                    lobby.lobbyActions.toggleEI(entities, command.equals(LMP_EI_ON));
+                    break;
+
                 case LMP_SQUADRON:
                     lobby.lobbyActions.createSquadron(entities);
                     break;
@@ -306,6 +316,10 @@ public record LobbyMekPopupActions(ChatLounge lobby) implements ActionListener {
                     updateCandidates = new HashSet<>();
                     lobby.detachTrailers(entities, updateCandidates);
                     lobby.sendUpdate(updateCandidates);
+                    break;
+
+                case LMP_CONNECT_TRAIN:
+                    lobby.lobbyActions.connectTrain(entities);
                     break;
 
                 case LMP_DETACH_FROM_TRACTOR:
@@ -435,8 +449,8 @@ public record LobbyMekPopupActions(ChatLounge lobby) implements ActionListener {
         MunitionTree munitionTree = new MunitionTree();
         ArrayList<Entity> entityArrayList = new ArrayList<>(entities);
         ClientGUI clientGUI = lobby.getClientGUI();
-        // Team team = lobby.game().getTeamForPlayer(entityArrayList.get(0).getOwner());
-        Team team = clientGUI.getClient().getGame().getTeamForPlayer(entityArrayList.get(0).getOwner());
+        // Team team = lobby.game().getTeamForPlayer(entityArrayList.getFirst().getOwner());
+        Team team = clientGUI.getClient().getGame().getTeamForPlayer(entityArrayList.getFirst().getOwner());
         String faction = (team != null) ? team.getFaction() : FactionRecord.IS_GENERAL_KEY;
 
         // Parameters are generated _from_ the teams' information, _for_ the selected entities
@@ -475,9 +489,12 @@ public record LobbyMekPopupActions(ChatLounge lobby) implements ActionListener {
             case LMP_APPLY_CONFIG:
                 munitionTree = loadLoadout();
                 if (null != munitionTree) {
-                    // Apply to entities
+                    // Apply existing loadout to selected entities.
+                    // Use the unlimited availability map (all munitions allowed in any amount)
                     resetBombChoices(clientGUI, lobby.game(), entityArrayList);
-                    tlg.reconfigureEntities(entityArrayList, faction, munitionTree, reconfigurationParameters, null);
+                    HashMap<String, Object> availMap = TeamLoadOutGenerator.createUnlimitedAllMunitionsMap();
+                    tlg.reconfigureEntities(entityArrayList, faction, munitionTree, reconfigurationParameters,
+                          availMap);
                     reconfigured = true;
                 }
                 break;
@@ -485,7 +502,7 @@ public record LobbyMekPopupActions(ChatLounge lobby) implements ActionListener {
         if (reconfigured) {
             // Have to send reconfig as controlling player
             clientGUI.chatlounge.sendProxyUpdates(entityArrayList,
-                  lobby.game().getPlayer(entityArrayList.get(0).getOwnerId()));
+                  lobby.game().getPlayer(entityArrayList.getFirst().getOwnerId()));
         }
     }
 
@@ -501,7 +518,7 @@ public record LobbyMekPopupActions(ChatLounge lobby) implements ActionListener {
             }
         }
         if (!resetBombers.isEmpty()) {
-            clientgui.chatlounge.sendProxyUpdates(resetBombers, game.getPlayer(el.get(0).getOwnerId()));
+            clientgui.chatlounge.sendProxyUpdates(resetBombers, game.getPlayer(el.getFirst().getOwnerId()));
         }
     }
 
@@ -545,8 +562,14 @@ public record LobbyMekPopupActions(ChatLounge lobby) implements ActionListener {
             return null;
         }
 
-        String file = jFileChooser.getSelectedFile().getAbsolutePath();
-        munitionTree = new MunitionTree(file);
+        try {
+            String file = jFileChooser.getSelectedFile().getAbsolutePath();
+            munitionTree = new MunitionTree(file);
+        } catch (IllegalArgumentException e) {
+            LobbyErrors.showADFReadError(frame(), e.getMessage());
+
+            return null;
+        }
         return munitionTree;
     }
 
@@ -561,5 +584,9 @@ public record LobbyMekPopupActions(ChatLounge lobby) implements ActionListener {
                 lobby.lobbyActions.tow(entity, info);
                 break;
         }
+    }
+
+    private JFrame frame() {
+        return lobby.getClientGUI().getFrame();
     }
 }
