@@ -118,10 +118,10 @@ public class CapitalMissileBayHandler extends AmmoBayWeaponHandler {
             if (entityTarget != null) {
                 if ((weaponType.getAmmoType() != AmmoType.AmmoTypeEnum.NA)
                       && (weapon.getLinked() != null)
-                      && (weapon.getLinked().getType() instanceof AmmoType ammoType)) {
-                    if (!ammoType.getMunitionType().contains(AmmoType.Munitions.M_STANDARD)) {
+                      && (weapon.getLinked().getType() instanceof AmmoType linkedAmmoType)) {
+                    if (!linkedAmmoType.getMunitionType().contains(AmmoType.Munitions.M_STANDARD)) {
                         report.messageId = 3116;
-                        report.add(ammoType.getSubMunitionName());
+                        report.add(linkedAmmoType.getSubMunitionName());
                     }
                 }
                 report.addDesc(entityTarget);
@@ -279,7 +279,7 @@ public class CapitalMissileBayHandler extends AmmoBayWeaponHandler {
             if (bMissed && id != vPhaseReport.size()) {
                 vPhaseReport.get(id - 1).newlines--;
                 vPhaseReport.get(id).indent(2);
-                vPhaseReport.get(vPhaseReport.size() - 1).newlines++;
+                vPhaseReport.getLast().newlines++;
             }
 
             // Make sure the player knows when his attack causes no damage.
@@ -587,10 +587,10 @@ public class CapitalMissileBayHandler extends AmmoBayWeaponHandler {
         if (entityTarget != null) {
             if ((weaponType.getAmmoType() != AmmoType.AmmoTypeEnum.NA)
                   && (weapon.getLinked() != null)
-                  && (weapon.getLinked().getType() instanceof AmmoType ammoType)) {
-                if (!ammoType.getMunitionType().contains(AmmoType.Munitions.M_STANDARD)) {
+                  && (weapon.getLinked().getType() instanceof AmmoType linkedAmmoType)) {
+                if (!linkedAmmoType.getMunitionType().contains(AmmoType.Munitions.M_STANDARD)) {
                     report.messageId = 3116;
-                    report.add(ammoType.getSubMunitionName());
+                    report.add(linkedAmmoType.getSubMunitionName());
                 }
             }
             report.addDesc(entityTarget);
